@@ -26,7 +26,7 @@
 #include                                        <stdlib.h>
 #include                                        <glib.h>
 #include                                        <gtk/gtk.h>
-#include                                        "hildon/hildon.h"
+#include                                        "hildon.h"
 
 gboolean
 on_button_press                                 (GtkWidget *widget, 
